# hello_glfw

./: .gitignore  README.md
cmake/: CMakeLists.txt  README.md  main.c
zig/: README.md  build.zig  build.zig.zon  build_glad.zig  build_glfw.zig  glfw_header.h  imgui.ini
zig/ClangTranslator/: CIndexParsr.zig  CXCursor.zig  CXString.zig  cxcursor_kind.zig  cxtype_kind.zig  main.zig
zig/imgui_helper/: imgui_impl_glfw.cpp  imgui_without_mangling.cpp  imgui_without_mangling.h
zig/src/: glfw_glue.c  glfw_glue.h  glfw_glue.zig  imgui.zig  imgui_cltgen.zig  imgui_sokol.zig  imgui_zcindex.zig  imgui_zcindex_sokol.zig  linmath.zig  main.zig  sokol.zig  sokol_imgui.cpp
zig/zcindex/: build.zig
zig/zcindex/src/: CIndexParsr.zig  CXCursor.zig  CXLocation.zig  CXString.zig  ClientData.zig  DebugPrinter.zig  SizePrinter.zig  ZigGenerator.zig  cx_declaration.zig  cx_util.zig  cxcursor_kind.zig  cxtype_kind.zig  main.zig  zig_generator.zig
